finish contact section and fix image clipping issues

--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.portfolio-section-underline {
+    text-decoration-color: rgb(117, 5, 223);
+}
